# The-Best-Man

./: .gitignore  README.md  cursorrules
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: api.py  github.py  ingestion.py
backend/app/routers/: memory.py  repos.py
backend/app/services/: github_service.py  ingestion_service.py  memory_service.py
backend/scripts/: smoke_test.py
backend/tests/: conftest.py  test_github_service.py  test_ingestion_service.py  test_memory_routes.py  test_memory_service.py  test_memory_service_live.py  test_repos.py
docs/: ARCHITECTURE.md  BUILD_LOG.md  DEMO_SCRIPT.md
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DecisionLogPanel.jsx  ForgetControl.jsx  ImproveFeedback.jsx  RecallPanel.jsx  RepoSetup.jsx
frontend/src/lib/: api.js
